new data version, WIP on sorting out spotting upcoming deps for train journeys